--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
  <form >
   <div class="form-group">
     <label for="labname">Department/Lab Name/</label>
-    <input type="text" class="form-control" placeholder="Ex:- ANITS/MECH/CADLAB/" id="labname" value="ANITS//" />
+    <input type="text" class="form-control" placeholder="Ex:- ANITS/MECH/CADLAB/" id="labname" />
   </div>
   <div class="form-group">
     <label for="num">Numbers List</label>
-    <input type="text" class="form-control" placeholder="Enter Number (1-5,9,15,20-25)" id="num" value="1-5" />
+    <input type="text" class="form-control" placeholder="Enter Number (1-5,9,15,20-25)" id="num" />
   </div> 
   <button type="button" id="btnSubmit" class="btn btn-primary">Submit</button>
 </form>
