--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <input type="text" class="form-control" id="num" placeholder="e.g. 1-5,9,15,20-25" />
       </div>
 
-      <button type="submit" class="btn btn-primary btn-block">Generate</button>
+      <button type="button" id="btnSubmit" class="btn btn-primary btn-block">Generate</button>
     </form>
   </div>
 
