--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>System Number Generator</title>
   <meta charset="utf-8" />
@@ -34,6 +35,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
@@ -64,4 +66,11 @@
   </div>
 
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script src="./script.js"></script>
+
 </html>
